@@ -15,10 +15,11 @@ automake -a
 #python scripts/plot.py test_output_fftw3.dat || exit
 
 
-bash configure 
+bash configure --enable-fftw3 
 make || exit
 cp doc/*png doc/ggadt.html
 make html || exit
-src/ggadt --grain-geometry=spheres --cluster-file-name=data/clusters/BA.256.1.targ --euler-angle-mode=file --euler-angle-file=eul_angle_file.dat > test_output_gpfa.dat || exit
-python scripts/plot.py test_output_gpfa.dat || exit
+python scripts/DA06.py
+#src/ggadt --grain-geometry=spheres --cluster-file-name=data/clusters/BA.256.1.targ --euler-angle-mode=file --euler-angle-file=eul_angle_file.dat > test_output_gpfa.dat || exit
+#python scripts/plot.py test_output_gpfa.dat || exit
 
